[project]
name = "thegrid"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "daniel", email = "contact@dnlzrgz.com" }]
requires-python = ">=3.14"
dependencies = ["typer>=0.20.0"]

[project.scripts]
thegrid = "thegrid:run"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["commitizen>=4.9.1", "pre-commit>=4.3.0", "pytest>=8.4.2"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
